--- a/express/views/404.html
+++ b/express/views/404.html
@@ -3,8 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Page not found</title>
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
+
+<header class="main-header">
+    <nav class="main-header__nav">
+        <ul class="main-header__items-list">
+            <li class="main-header__item"><a class="active" href="/">Shop</a></li>
+            <li class="main-header__item"><a href="/admin/add-product">Add product</a></li>
+        </ul>
+    </nav>
+</header>
+
     <h1>Page not found!</h1>
 </body>
 </html>
