--- a/express/views/404.html
+++ b/express/views/404.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Page not found</title>
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/forms.css">
+    <link rel="stylesheet" href="/css/product.css">
 </head>
 <body>
 
