--- a/express/views/shop.html
+++ b/express/views/shop.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Add product</title>
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/forms.css">
+    <link rel="stylesheet" href="/css/product.css">
 </head>
 <body>
 <header class="main-header">
