--- a/express/public/css/forms.css
+++ b/express/public/css/forms.css
@@ -18,7 +18,8 @@ button:active {
 }
 
 .form-control label,
-.form-control input {
+.form-control input,
+.form-control textarea {
     display: block;
     width: 100%;
 }
