--- a/express/views/shop/cart.ejs
+++ b/express/views/shop/cart.ejs
@@ -18,10 +18,14 @@
                     <input type="hidden" value="<%= p.id %>" name="productId">
                     <button class="btn" type="submit">Delete</button>
                 </form>
-
             </li>
         <% }) %>
     </ul>
+        <div class="centered">
+            <form action="/create-order" method="post">
+                <button type="submit" class="btn">Order now!</button>
+            </form>
+        </div>
 <% } else { %>
     <h1>No products in cart</h1>
 <% } %>
