--- a/express/public/css/forms.css
+++ b/express/public/css/forms.css
@@ -1,31 +1,23 @@
-
-button {
-    font: inherit;
-    border: 1px solid #411e94;
-    color: #411e94;
-    background: white;
-    border-radius: 3px;
-    cursor: pointer;
-}
-
-button:hover,
-button:active {
-    background: #411e94;
-    color: white;
-}
 .form-control {
-    margin: 1rem 0;
+  margin: 1rem 0;
 }
 
 .form-control label,
 .form-control input,
 .form-control textarea {
-    display: block;
-    width: 100%;
+  display: block;
+  width: 100%;
+  margin-bottom: 0.25rem;
 }
 
-.form-control input {
-    border: 1px solid #dbc441;
-    font: inherit;
-    border-radius: 2px;
+.form-control input,
+.form-control textarea {
+  border: 1px solid #a1a1a1;
+  font: inherit;
+  border-radius: 2px;
+}
+
+.form-control input:focus,
+.form-control textarea:focus {
+  outline-color: #00695c;
 }
