--- a/express/views/includes/navigation.ejs
+++ b/express/views/includes/navigation.ejs
@@ -7,14 +7,14 @@
             <li class="main-header__item">
                 <a class="<%= path === '/products' ? 'active' : ''%>" href="/products">Products</a>
             </li>
-            <li class="main-header__item">
-                <a class="<%= path === '/cart' ? 'active' : ''%>" href="/cart">Cart</a>
-            </li>
-            <li class="main-header__item">
-                <a class="<%= path === '/orders' ? 'active' : ''%>" href="/orders">Orders</a>
-            </li>
 
             <% if (isAuthenticated) { %>
+                <li class="main-header__item">
+                    <a class="<%= path === '/cart' ? 'active' : ''%>" href="/cart">Cart</a>
+                </li>
+                <li class="main-header__item">
+                    <a class="<%= path === '/orders' ? 'active' : ''%>" href="/orders">Orders</a>
+                </li>
                 <li class="main-header__item">
                     <a class="<%= path === '/admin/add-product' ? 'active' : ''%>" href="/admin/add-product">Add product</a>
                 </li>
@@ -24,9 +24,17 @@
             <% } %>
         </ul>
         <ul class="main-header__item-list">
-            <li class="main-header__item">
-                <a class="<%= path === '/login' ? 'active' : ''%>" href="/login">Login</a>
-            </li>
+            <% if (isAuthenticated) { %>
+                <li class="main-header__item">
+                    <form action="/logout" method="post">
+                        <button type="submit">Logout</button>
+                    </form>
+                </li>
+            <% } else {%>
+                <li class="main-header__item">
+                    <a class="<%= path === '/login' ? 'active' : ''%>" href="/login">Login</a>
+                </li>
+            <% } %>
         </ul>
     </nav>
 </header>
