--- a/express/views/admin/edit-product.ejs
+++ b/express/views/admin/edit-product.ejs
@@ -7,15 +7,22 @@
 <%- include('../includes/navigation.ejs') %>
 
 <main>
-    <form class="product-form" action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>" method="post">
+    <form class="product-form" action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>" method="post" enctype="multipart/form-data">
         <div class="form-control">
             <label for="title">Title</label>
             <input type="text" name="title" id="title" value="<% if (editing) { %><%= product.title %><% } else { %><% } %>">
         </div>
+
+<!--        <div class="form-control">-->
+<!--            <label for="imageUrl">Image URL</label>-->
+<!--            <input type="text" name="imageUrl" id="imageUrl" value="<% if (editing) { %><%= product.imageUrl %><% } else { %><% } %>">-->
+<!--        </div>-->
+
         <div class="form-control">
-            <label for="imageUrl">Image URL</label>
-            <input type="text" name="imageUrl" id="imageUrl" value="<% if (editing) { %><%= product.imageUrl %><% } else { %><% } %>">
+            <label for="image">Image</label>
+            <input type="file" name="image" id="image">
         </div>
+
         <div class="form-control">
             <label for="price">Price</label>
             <input type="number" name="price" id="price" value="<% if (editing) { %><%= product.price %><% } else { %><% } %>">
