--- a/express/views/admin/edit-product.ejs
+++ b/express/views/admin/edit-product.ejs
@@ -7,16 +7,15 @@
 <%- include('../includes/navigation.ejs') %>
 
 <main>
+    <% if (errorMessage) { %>
+        <div class="user-message user-message--error"><%= errorMessage %></div>
+    <% } %>
+
     <form class="product-form" action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>" method="post" enctype="multipart/form-data">
         <div class="form-control">
             <label for="title">Title</label>
             <input type="text" name="title" id="title" value="<% if (editing) { %><%= product.title %><% } else { %><% } %>">
         </div>
-
-<!--        <div class="form-control">-->
-<!--            <label for="imageUrl">Image URL</label>-->
-<!--            <input type="text" name="imageUrl" id="imageUrl" value="<% if (editing) { %><%= product.imageUrl %><% } else { %><% } %>">-->
-<!--        </div>-->
 
         <div class="form-control">
             <label for="image">Image</label>
