--- a/express/views/admin/products.ejs
+++ b/express/views/admin/products.ejs
@@ -7,6 +7,10 @@
 <%- include('../includes/navigation.ejs') %>
 
 <main>
+    <% if (errorMessage) { %>
+        <div class="user-message user-message--error"><%= errorMessage %></div>
+    <% } %>
+
     <% if (prods.length > 0) { %>
         <div class="grid">
             <% for (let product of prods ) { %>
@@ -15,7 +19,7 @@
                         <h1 class="product__title"><%= product.title %></h1>
                     </header>
                     <div class="card__image">
-                        <img src="<%= product.imageUrl %>" alt="A Book">
+                        <img src="/<%= product.imageUrl %>" alt="<%= product.title %>">
                     </div>
                     <div class="card__content">
                         <h2 class="product__price">$<%= product.price %></h2>
