--- a/express/views/shop/index.ejs
+++ b/express/views/shop/index.ejs
@@ -28,16 +28,27 @@
             <% } %>
         </div>
     <section class="pagination">
-        totalProducts
-        hasNextPage
-        hasPreviousPage
-        nextPage
-        previousPage
-        lastPage
+<!--        totalProducts-->
+<!--        hasNextPage-->
+<!--        hasPreviousPage-->
+<!--        nextPage-->
+<!--        previousPage-->
+<!--        lastPage-->
 
-        <a href="/?page=1">1</a>
+        <% if (currentPage != 1) { %>
+            <a href="/?page=1">1</a>
+        <% } %>
 
         <a href="/?page=<%= currentPage %>" class="active"><%= currentPage %></a>
+
+        <% if (hasNextPage) { %>
+            <a href="/?page=<%= nextPage %>"><%= nextPage %></a>
+        <% } %>
+
+        <% if (lastPage !== currentPage && nextPage !== lastPage) { %>
+            <a href="/?page=<%= lastPage %>"><%= lastPage %></a>
+        <% } %>
+
     </section>
     <% } else { %>
         <h1>No products found</h1>
