--- a/express/public/css/main.css
+++ b/express/public/css/main.css
@@ -241,6 +241,26 @@ form {
   color: white;
 }
 
+.pagination {
+  margin-top: 2rem;
+  text-align: center;
+
+}
+.pagination a {
+  text-decoration: none;
+  color: #04573c;
+  padding: 0.5rem;
+  border: 1px solid #04573c;
+  margin: 0 1rem;
+}
+
+.pagination a:hover,
+.pagination a:active,
+.pagination a.active {
+  background: #04573c;
+  color: white;
+}
+
 @media (min-width: 768px) {
   .main-header__nav {
     display: flex;
