--- a/express/views/shop/product-list.ejs
+++ b/express/views/shop/product-list.ejs
@@ -31,6 +31,14 @@
                 </article>
             <% } %>
         </div>
+        <%- include('../includes/pagination.ejs', {
+            currentPage: currentPage,
+            hasNextPage: hasNextPage,
+            hasPreviousPage: hasPreviousPage,
+            nextPage: nextPage,
+            previousPage: previousPage,
+            lastPage: lastPage,
+        }) %>
     <% } else { %>
         <h1>No products found</h1>
     <% } %>
