--- a/express/views/admin/products.ejs
+++ b/express/views/admin/products.ejs
@@ -26,12 +26,12 @@
                         <p class="product__description"><%= product.description %></p>
                     </div>
                     <div class="card__actions">
-                        <a href="/admin/edit-product/<%= product._id %>?edit=true" class="btn">Edit</a>
-                        <form action="/admin/delete-product" method="post">
+                            <a href="/admin/edit-product/<%= product._id %>?edit=true" class="btn">Edit</a>
+<!--                        <form action="/admin/delete-product" method="post">-->
                             <input type="hidden" value="<%= product._id %>" name="productId">
                             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                            <button type="submit" class="btn">Delete</button>
-                        </form>
+                            <button type="submit" class="btn" onClick="deleteProduct(this)">Delete</button>
+<!--                        </form>-->
                     </div>
                 </article>
             <% } %>
@@ -41,3 +41,4 @@
     <% } %>
 </main>
 <%- include('../includes/end.ejs') %>
+<script src="/js/admin.js"></script>
