--- a/express/views/shop/checkout.ejs
+++ b/express/views/shop/checkout.ejs
@@ -21,7 +21,7 @@
                 <button class="btn" id="order-btn">ORDER</button>
                 <script src="https://js.stripe.com/v3/"></script>
                 <script>
-                  var stripe = Stripe('pk_test_51QUEIGHJd0rBwEEOCm4vXhFqtdYDKVOH35E6E2NhvxU0A1luLu6tOPB45kuMqkeFy0KGm2u2TgzHl4L8t1LwJ7go0095oBfGkc');
+                  var stripe = Stripe(<%= stripePkKey %>);
                   var orderBtn = document.getElementById('order-btn');
                   orderBtn.addEventListener('click', function() {
                     stripe.redirectToCheckout({
